# hyprzones

./: .clang-format  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.sh  hyprpm.toml
docs/: ARCH_HYPRZONES_MAPPINGS.md  ARCH_HYPRZONES_MATH.md  ARCH_HYPRZONES_OVERVIEW.md  INST_HYPRZONES_EDITOR.md  INST_HYPRZONES_PLUGIN.md
editor/: ags.d.ts  app.ts  run.sh  style.scss  tsconfig.json
editor/components/: Splitter.tsx  Toolbar.tsx  Zone.tsx
editor/models/: Layout.ts
editor/services/: HyprzonesIPC.ts  LayoutService.ts  MonitorService.ts
editor/state/: EditorState.ts
editor/utils/: geometry.ts
editor/widget/: LayoutPanel.ts  Splitter.ts  Toolbar.ts  ZoneEditor.ts  ZoneOperations.ts
editor/windows/: ZoneEditor.tsx
examples/: hyprzones.toml
include/: hyprzones.hpp
include/hyprzones/: Color.hpp  Config.hpp  DragState.hpp  Forward.hpp  Globals.hpp  Layout.hpp  LayoutManager.hpp  Renderer.hpp  WindowSnapper.hpp  Zone.hpp  ZoneManager.hpp
src/: Color.cpp  ConfigParser.cpp  Globals.cpp  LayoutManager.cpp  Renderer.cpp  WindowSnapper.cpp  ZoneManager.cpp  main.cpp
